# pico-74hc165

./: CMakeLists.txt  README.md
src/: 74hc165-x2.pio  74hc165.pio  main.c
